dpkg: Add progress reporting while reading the file list database
Reading the files database can take a while on machines with slow disks
and an empty cache. To make the wait more tolerable try to display a
progress indicator if the output is a terminal.

Based-on-patch-by: Romain Francoise <rfrancoise@debian.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
 2009-02-26  Romain Francoise <rfrancoise@debian.org>,
             Guillem Jover  <guillem@debian.org>
 
+	* src/filesdb.c: Include 'progress.h'.
+	(ensure_allinstfiles_available): Call progress_init instead of
+	directly printing. Call progress_step if needing to print on each
+	package iteration. And call progress_done if needing to print when
+	finished.
+
+2009-02-26  Romain Francoise <rfrancoise@debian.org>,
+            Guillem Jover  <guillem@debian.org>
+
 	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'progress.h' and
 	'progress.c'.
 	* lib/progress.h: New file.
