--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Document in deb.5 in detail the currently supported format, ar member
     names, types of tar archives and data.tar members.
   * Print correct feature name on «dpkg --assert-*» failures.
+  * Add progress reporting to dpkg while reading the file list database.
+    Based on a patch by Romain Francoise.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
