s-s-d: Support setting the IO scheduler class and priority
Add new option -I, --iosched <class[:priority]>.

Closes: #443535

Signed-off-by: Guillem Jover <guillem@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,9 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Print correct feature name on «dpkg --assert-*» failures.
   * Add progress reporting to dpkg while reading the file list database.
     Based on a patch by Romain Francoise.
+  * Add new option --iosched to start-stop-daemon to be able to set the
+    IO scheduling class and priority. Closes: #443535
+    Thanks to Chris Coulson <chrisccoulson@googlemail.com>.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
