--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+2009-02-26  Chris Coulson  <chrisccoulson@googlemail.com>,
+            Guillem Jover  <guillem@debian.org>
+
+	* configure.ac (AC_CHECK_HEADERS): Add 'sys/syscall.h'.
+	* man/start-stop-daemon.8: Document new option --iosched.
+	* utils/start-stop-daemon.c [HAVE_SYS_SYSCALL_H]: Include
+	<sys/syscall.h>.
+	(HAVE_IOPRIO_SET) [SYS_ioprio_set, linux]: New macro.
+	(IOPRIO_CLASS_NONE, IOPRIO_CLASS_RT): New anonymous enum.
+	(IOPRIO_CLASS_BE, IOPRIO_CLASS_IDLE): Likewise.
+	(IOPRIO_WHO_PROCESS, IOPRIO_WHO_PGRP, IOPRIO_WHO_USER): Likewise.
+	(IOPRIO_CLASS_SHIFT, IOPRIO_PRIO_VALUE, IO_SCHED_PRIO_MIN)
+	(IO_SCHED_PRIO_MAX): New macros.
+	(io_sched): New variable.
+	(do_help): Document --iosched.
+	(ioprio_set) [HAVE_IOPRIO_SET]: New function.
+	(parse_io_schedule, set_io_schedule): Likewise.
+	(parse_options): Add 'iosched' to longopts. Add 'I:' to getopt_long
+	call. Handle 'I' as getopt_long return value. Call parse_io_schedule
+	if io_schedule_str is not NULL.
+	(main): Print io_sched values if --test is used. Call set_io_schedule
+	if io_sched is not NULL.
+
 2009-02-26  Romain Francoise <rfrancoise@debian.org>,
             Guillem Jover  <guillem@debian.org>
 
