--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -4,7 +4,7 @@
 
 2009-02-05  Wiktor Wandachowicz  <siryes@gmail.com>
 
-	* pl.po: Updated to 472t
+	* pl.po: Updated to 472t.
 
 2009-01-02  Guillem Jover  <guillem@debian.org>
 
@@ -12,20 +12,20 @@
 
 2008-01-05  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: missing space added ("devriez définir")
+	* fr.po: Missing space added ("devriez définir").
 
 2008-12-29  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
 	* *.po: Merged with dpkg-dev.pot.
 
-2008-12-27  Helge Kreutzmann <debian@helgefjell.de>
+2008-12-27  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* de.po: Change translation of "Usage"
+	* de.po: Change translation of "Usage".
 
 2008-11-15  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: Updated to 473t
+	* fr.po: Updated to 473t.
 
 2008-11-14  Guillem Jover  <guillem@debian.org>
 
@@ -34,11 +34,11 @@
 
 2008-11-01  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: Fix wrong translation (#504123)
+	* fr.po: Fix wrong translation (#504123).
 
 2008-09-23  Yuri Kozlov  <kozlov.y@gmail.com>
 
-	* ru.po: Fix typo (#499736)
+	* ru.po: Fix typo (#499736).
 
 2008-08-29  Peter Krefting  <peterk@debian.org>
 
@@ -125,7 +125,7 @@
 
 2008-05-05  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* de.po: Updated to 467t0f2u. / a minor fix
+	* de.po: Updated to 467t0f2u. / a minor fix.
 
 2008-05-03  Yuri Kozlov  <kozlov.y@gmail.com>
 
@@ -146,7 +146,7 @@
 
 2008-04-22  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* de.po: Fix a translation after seeing it in practice
+	* de.po: Fix a translation after seeing it in practice.
 
 2008-04-22  Helge Kreutzmann  <debian@helgefjell.de>
 
