Add bug closure for Slovak translation
Forgotten in commit 4e48feb813cf551183f2aac1540a15340501fe27.

--- a/debian/changelog
+++ b/debian/changelog
@@ -189,7 +189,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Portuguese (Miguel Figueiredo).
   * Korean (Changwoo Ryu).
   * Romanian (Eddy Petrișor)
-  * Slovak (Ivan Masár)
+  * Slovak (Ivan Masár). Closes: #514490
 
  -- Guillem Jover <guillem@debian.org>  Tue, 29 Jul 2008 02:34:59 +0300
 
