libdpkg: Do nothing when parsing a boolean field with an empty string
The field should have been already initialized to 0 by
blankpackageperfile, so no need to assign again.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-27  Guillem Jover  <guillem@debian.org>
+
+	* lib/fields.c (f_boolean): Return if value is an empty string.
+
 2009-02-26  Chris Coulson  <chrisccoulson@googlemail.com>,
             Guillem Jover  <guillem@debian.org>
 
