libdpkg: Generalize f_boolean by not hardcoding to the essential member
Fix the function to use PKGPFIELD to assign to the correct struct
member instead of directly assigning to the essential member. This also
makes this function match its write counterpart w_booleandefno's generic
behaviour.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-02-27  Guillem Jover  <guillem@debian.org>
 
+	* lib/fields.c (f_boolean): Use PKGPFIELD to assign to the correct
+	member instead of hardcoding to the essential member.
+
+2009-02-27  Guillem Jover  <guillem@debian.org>
+
 	* lib/fields.c (f_boolean): Return if value is an empty string.
 
 2009-02-26  Chris Coulson  <chrisccoulson@googlemail.com>,
