libdpkg: Add support for ustar long names using the prefix field
The ustar format has been supported up to now except for the long names
which use the prefix field that needs to be prepended to the name field
if non empty.

Closes: #474092

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-02-27  Guillem Jover  <guillem@debian.org>
 
+	* lib/tarfn.c (get_prefix_name): New function.
+	(DecodeTarHeader): On tar_format_ustar and if Prefix is not empty
+	call get_prefix_name instead of aborting.
+	* man/deb.5: Document that ustar format is now properly supported.
+
+2009-02-27  Guillem Jover  <guillem@debian.org>
+
 	* lib/tarfn.h (enum tar_format): New type.
 	(struct TarInfo): Add new format member.
 	* lib/tarfn.c (TAR_MAGIC_USTAR, TAR_MAGIC_GNU): New macros.
