--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     IO scheduling class and priority. Closes: #443535
     Thanks to Chris Coulson <chrisccoulson@googlemail.com>.
   * Add tar format detection support to the internal extractor.
+  * Add support for ustar long names using the prefix field. Closes: #474092
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
