update-alternatives: add some consistency in the output
Make sure that all messages that are likely to appear in the
output as part of --install and --remove call are identified
as coming from update-alternatives. Factorize the logic of output and
verbosity in some standard function (info, warning, verbose).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-02-27  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/update-alternatives.pl: Improve output messages
+	by identifying their origin and by being more consistent.
+	* scripts/t/900_update_alternatives.t: Adjust test suite
+	for one error message that's now on standard error instead
+	of standard output.
+
 2009-02-27  Guillem Jover  <guillem@debian.org>
 
 	* lib/tarfn.c (get_prefix_name): New function.
