--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-02-27  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Add one more sanity check
+	verifying that <link> and <path> are different (cf #509667 for a
+	sample).
+
+2009-02-27  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Improve output messages
 	by identifying their origin and by being more consistent.
 	* scripts/t/900_update_alternatives.t: Adjust test suite
