dpkg-gensymbols: replace #PACKAGE# in dependency templates
To better support packages of libraries that have different names
between architectures, offer the possibility to not hardcode the package
name in the symbols file by using #PACKAGE#. This marker is then
substituted by dpkg-gensymbols when the symbols files are installed inside
the binary package.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2009-02-27  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/Shlibs/SymbolFile.pm (save, dump): Add new
+	parameter asking that #PACKAGE# be replaced on the fly.
+	* scripts/dpkg-gensymbols.pl: Replace #PACKAGE# while outputting
+	symbols files.
+	* man/dpkg-gensymbols.1: Document the new feature.
+	* scripts/t/200_Dpkg_Shlibs.t,
+	scripts/t/200_Dpkg_Shlibs/symbols.fake-2: Add test-case for
+	replacement of #PACKAGE# on the fly (together with test of dump).
+
+2009-02-27  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Add one more sanity check
 	verifying that <link> and <path> are different (cf #509667 for a
 	sample).
