--- a/man/dpkg-gensymbols.1
+++ b/man/dpkg-gensymbols.1
@@ -56,6 +56,14 @@ with "~".
 Before applying any patch to the symbols file, the maintainer should
 double-check that it's sane. Public symbols are not supposed to disappear,
 so the patch should ideally only add new lines.
+.SS Using #PACKAGE# substitution
+.P
+In some rare cases, the name of the library varies between architectures.
+To avoid hardcoding the name of the package in the symbols file, you can
+use the marker \fI#PACKAGE#\fR. It will be replaced by the real package
+name during installation of the symbols files. Contrary to the
+\fI#MINVER#\fR marker, \fI#PACKAGE#\fR will never appear in a symbols file
+inside a binary package.
 .SS Using includes
 .P 
 When the set of exported symbols differ between architectures, it's no
@@ -190,7 +198,7 @@ Show the version and exit.
 .BR dpkg\-shlibdeps (1).
 .
 .SH AUTHORS
-Copyright \(co 2007 Rapha\[:e]l Hertzog
+Copyright \(co 2007-2009 Rapha\[:e]l Hertzog
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
