Remove remaining references to cleanup-info
The build was failing when xgettext was trying to scan the non-existent
file scripts/cleanup-info.pl.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-02  Guillem Jover  <guillem@debian.org>
+
+	* po/POTFILES.in: Remove reference to cleanup-info.pl.
+	* scripts/.gitignore: Likewise.
+
 2009-02-27  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/update-alternatives.pl: Avoid logging too many
