--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-03-02  Guillem Jover  <guillem@debian.org>
 
+	* scripts/update-alternatives.pl (load): Print an actual error on open
+	instead of an empty string.
+
+2009-03-02  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl: Do not use non-ASCII strings on C
 	locale.
 	(version): Likewise.
