Summarize cleanup and refactoring silent commits

--- a/debian/changelog
+++ b/debian/changelog
@@ -63,6 +63,17 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     Thanks to Chris Coulson <chrisccoulson@googlemail.com>.
   * Add tar format detection support to the internal extractor.
   * Add support for ustar long names using the prefix field. Closes: #474092
+  * Code refactoring and cleanup, some of the major changes include:
+    - Use standard interfaces instead of ad-hoc ones.
+    - Fix memory leaks.
+    - Fix compilation warnings.
+    - Constify string members in structures and arguments in functions.
+    - Make local functions static.
+    - Remove unused functions, macros and variables.
+    - Fix and cleanup libcompat broken replacement implementations.
+    - Reduction of module interdependencies.
+    - Rename function and variable names to make them more clear.
+    - Cleanup and split of header files.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
