u-a: Fix test suite to use t.tmp from builddir instead of srcdir
This fixes “make distcheck”, as t.tmp is a read/write directory it has
to be used under builddir, which in most cases happens to be the same as
srcdir.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-03-02  Guillem Jover  <guillem@debian.org>
 
+	* scripts/t/900_update_alternatives.t: Do not use $srcdir for t.tmp,
+	it's actually located in builddir.
+
+2009-03-02  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl (load): Print an actual error on open
 	instead of an empty string.
 
