--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.15.1) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Mon, 02 Mar 2009 06:22:36 +0200
+
 dpkg (1.15.0) experimental; urgency=low
 
   [ Guillem Jover ]
