--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.15.1) UNRELEASED; urgency=low
 
-  *
+  [ Updated dselect translations ]
+  * German (Sven Joachim).
 
  -- Guillem Jover <guillem@debian.org>  Mon, 02 Mar 2009 06:22:36 +0200
 
