--- a/dselect/po/de.po
+++ b/dselect/po/de.po
@@ -4,14 +4,14 @@
 # Erich Schubert <debian@vitavonni.de>, March 2001.
 # Michael Piefel <piefel@debian.org>, 2001, 2002, 2003, 2004, 2005.
 # Florian Ernst <florian@uni-hd.de>, 2004.
-# Sven Joachim <svenjoac@gmx.de>, 2006, 2007, 2008.
+# Sven Joachim <svenjoac@gmx.de>, 2006, 2007, 2008, 2009.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.14.18\n"
+"Project-Id-Version: Debian dpkg 1.15.0\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-03-02 04:56+0200\n"
-"PO-Revision-Date: 2008-05-09 12:41+0200\n"
+"PO-Revision-Date: 2009-03-02 17:17+0100\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1629,7 +1629,7 @@ msgstr "Verfügbare Control-Datei-Informationen"
 
 #: dselect/pkglist.cc:419
 msgid "There are no packages."
-msgstr ""
+msgstr "Es gibt keine Pakete."
 
 #: dselect/pkglist.cc:506
 msgid "invalid search option given"
@@ -1729,45 +1729,3 @@ msgstr "Inst.Ver"
 #: dselect/pkgtop.cc:301
 msgid "Avail.ver"
 msgstr "Verf.Ver"
-
-# Debug-Ausgabe: Warum ist das überhaupt übersetzbar?
-#~ msgid ""
-#~ "baselist::startdisplay() done ...\n"
-#~ "\n"
-#~ " xmax=%d, ymax=%d;\n"
-#~ "\n"
-#~ " title_height=%d, colheads_height=%d, list_height=%d;\n"
-#~ " thisstate_height=%d, info_height=%d, whatinfo_height=%d;\n"
-#~ "\n"
-#~ " colheads_row=%d, thisstate_row=%d, info_row=%d;\n"
-#~ " whatinfo_row=%d, list_row=%d;\n"
-#~ "\n"
-#~ msgstr ""
-#~ "baselist::startdisplay() abgeschlossen ...\n"
-#~ "\n"
-#~ " xmax=%d, ymax=%d;\n"
-#~ "\n"
-#~ " title_height=%d, colheads_height=%d, list_height=%d;\n"
-#~ " thisstate_height=%d, info_height=%d, whatinfo_height=%d;\n"
-#~ "\n"
-#~ " colheads_row=%d, thisstate_row=%d, info_row=%d;\n"
-#~ " whatinfo_row=%d, list_row=%d;\n"
-#~ "\n"
-
-# Debug-Ausgabe: Warum ist das überhaupt übersetzbar?
-#~ msgid "[none]"
-#~ msgstr "[keine]"
-
-#~ msgid "error un-catching signal %d: %s\n"
-#~ msgstr "Fehler beim nicht-mehr-Abfangen des Signals %d: %s\n"
-
-#~ msgid "unable to ignore signal %d before running %.250s"
-#~ msgstr "Kann Signal %d vor dem Starten von %250s nicht ignorieren"
-
-# Debug-Ausgabe: Warum ist das überhaupt übersetzbar?
-#~ msgid "(no clientdata)"
-#~ msgstr "(keine Daten vom Klienten)"
-
-# Debug-Ausgabe: Warum ist das überhaupt übersetzbar?
-#~ msgid "<null>"
-#~ msgstr "<Null>"
