dpkg-genchanges: correctly handles additional upstream tarballs
The source format 3.0 (quilt) allows additional upstream tarballs
named <pkg>_<upstreamversion>.orig-<component>.tar.<ext>. They
should be treated like normal .orig tarballs and be left out
like them in normal "binary and diff upload".

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,10 @@
 dpkg (1.15.1) UNRELEASED; urgency=low
 
+  [ Raphael Hertzog ]
+  * Fix dpkg-genchanges to not include the additional upstream tarballs
+    when they are not desired (specific to source packages using format 3.0
+    quilt).
+
   [ Updated dselect translations ]
   * German (Sven Joachim).
 
