Update Swedish translation.
Updated dselect/po/sv.po to 283t0f0u.
Updated scripts/po/sv.po to 473t0f0u.
Updated po/sv.po to 1004t0f0u.

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,13 @@ dpkg (1.15.1) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * German (Sven Joachim).
+  * Swedish (Peter Krefting).
+
+  [ Updated scripts translations ]
+  * Swedish (Peter Krefting).
+
+  [ Updated dpkg translations ]
+  * Swedish (Peter Krefting).
 
  -- Guillem Jover <guillem@debian.org>  Mon, 02 Mar 2009 06:22:36 +0200
 
