dpkg-source: call quilt only once to apply all patches
Refactor Dpkg::Source::Package::V3::quilt::apply_patches() to
call quilt only once (quilt push -a -q) instead of once per patch. This
dramatically improves performance for packages like glibc that
have a large number of patches.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ dpkg (1.14.27) UNRELEASED; urgency=low
     - do not update/create debian/patches/.dpkg-source-applied during build,
       it's only meant to document what patches have been applied at extraction
       time. Closes: #525835
+    - call quilt only once to apply all patches instead of once per patch
+      when building 3.0 (quilt) source packages. Closes: #518453
 
  -- Raphael Hertzog <hertzog@debian.org>  Thu, 09 Apr 2009 20:32:31 +0200
 
