dpkg-source: call quilt only once to apply all patches
Refactor Dpkg::Source::Package::V3::quilt::apply_patches() to
call quilt only once (quilt push -a -q) instead of once per package. This
dramatically improves performance for packages like glibc that
have a large number of patches.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Fix dpkg-genchanges to not include the additional upstream tarballs
     when they are not desired (specific to source packages using format 3.0
     quilt).
+  * Call quilt only once to apply all patches instead of once per patch
+    when building 3.0 (quilt) source packages. Closes: #518453
 
   [ Updated dselect translations ]
   * German (Sven Joachim).
