dpkg-shlibdeps: don't fail on binaries outside of a package's dir
Dpkg 1.15.0 introduced a regression by trying to deduce the target
directory in order to adjust some warnings. This check failed when
dpkg-shlibdeps was run on files not (yet) installed in the package's
directory (debian/package/). Fix that and emit a warning so that
maintainers are encouraged to analyze the binaries once they have
been installed in their target directory.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     quilt).
   * Call quilt only once to apply all patches instead of once per patch
     when building 3.0 (quilt) source packages. Closes: #518453
+  * Fix dpkg-shlibdeps so that it works again when analyzing binaries
+    outside of package's directory. Closes: #518687
 
   [ Updated dselect translations ]
   * German (Sven Joachim).
