dpkg-shlibdeps: make shlibs.local override symbols files too
As discussed in http://lists.debian.org/debian-devel/2009/03/msg00428.html
dropping the shlibs.local package override for symbols files was not
necessarily a good idea. So this commit makes dpkg-shlibdeps skip
the symbols files for a library if it detects that the relevant dependency
is available in the shlibs.local file.

--- a/man/dpkg-shlibdeps.1
+++ b/man/dpkg-shlibdeps.1
@@ -35,7 +35,8 @@ Then, for each library, it looks up either the
 .I symbols
 file, or the
 .I shlibs
-file (if the former doesn't exist). Both files are supposed to be provided
+file (if the former doesn't exist or if debian/shlibs.local contains
+the relevant dependency). Both files are supposed to be provided
 by the library package and should thus be available as
 /var/lib/dpkg/info/\fIpackage\fR.\fIsymbols\fR
 or /var/lib/dpkg/info/\fIpackage\fR.\fIshlibs\fR. The package name is
