Recomplete german scripts translation
Update to 473t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Swedish (Peter Krefting).
 
   [ Updated scripts translations ]
+  * German (Helge Kreutzmann).
   * Swedish (Peter Krefting).
 
   [ Updated dpkg translations ]
