Recomplete French translations
Update to 473t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
   * Swedish (Peter Krefting).
+  * French (Christian Perrier).
 
   [ Updated dpkg translations ]
   * Swedish (Peter Krefting).
