--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -1,15 +1,16 @@
 # Translation of dpkg scripts messages templates to French
-# Copyright (C) 2007 Frédéric Bothamy <frederic.bothamy@free.fr>
+# Copyright (C) 2007-2009 Debian French l10n team <debian-l10n-french@lists.debian.org>
 # This file is distributed under the same license as the dpkg package.
 #
+# Translators:
 # Frédéric Bothamy <frederic.bothamy@free.fr>, 2005-2007.
-# Christian Perrier <bubulle@debian.org>, 2008.
+# Christian Perrier <bubulle@debian.org>, 2008, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-03-02 04:55+0200\n"
-"PO-Revision-Date: 2008-06-09 21:52+0200\n"
+"PO-Revision-Date: 2009-03-09 06:49+0100\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -167,7 +168,7 @@ msgstr ""
 "Copyright (C) 2007 Frank Lichtenheld."
 
 #: scripts/dpkg-buildpackage.pl:36
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "\n"
 "Usage: %s [<options> ...]\n"
@@ -230,6 +231,10 @@ msgstr ""
 "  -d             ne pas vérifier les dépendances de construction et les "
 "conflits.\n"
 "  -D             vérifier les dépendances de construction et les conflits.\n"
+"  -T<cible>      lancer « debian/rules <cible » avec l'environnement "
+"adéquat.\n"
+"  --as-root      avec -T, appeler la cible avec les droits du\n"
+"                 superutilisateur.\n"
 "  -j[<nombre>]   spécifier le nombre de tâches à exécuter simultanément } "
 "passé à debian/rules\n"
 "  -k<id-clé>     clé à utiliser pour la signature.\n"
@@ -1140,9 +1145,8 @@ msgid " * Unconditional maintainer override for %s *"
 msgstr " * Annulation inconditionnelle du responsable pour %s *"
 
 #: scripts/dpkg-scanpackages.pl:115
-#, fuzzy
 msgid "1 to 3 args expected"
-msgstr "de 1 à 3 paramètres attendus\n"
+msgstr "de 1 à 3 paramètres attendus"
 
 #: scripts/dpkg-scanpackages.pl:136
 #, perl-format
@@ -1434,7 +1438,7 @@ msgid "need at least one executable"
 msgstr "au moins un exécutable est nécessaire"
 
 #: scripts/dpkg-shlibdeps.pl:157
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "couldn't find library %s needed by %s (ELF format: '%s'; RPATH: '%s').\n"
 "Note: libraries are not searched in other binary packages that do not have "
@@ -1442,8 +1446,8 @@ msgid ""
 "To help dpkg-shlibdeps find private libraries, you might need to set "
 "LD_LIBRARY_PATH."
 msgstr ""
-"impossible de trouver la bibliothèque %s demandée par %s (son RPATH est « %"
-"s »).\n"
+"impossible de trouver la bibliothèque %s demandée par %s (format ELF : « %"
+"s », RPATH : « %s »).\n"
 "Note : les bibliothèques ne sont pas recherchées dans d'autres paquets "
 "binaires qui n'ont pas de fichier shlibs ou de fichier de symboles.\n"
 "Pour aider dpkg-shlibdeps à trouver des bibliothèques privées, vous devriez "
@@ -1469,6 +1473,8 @@ msgstr "symbole %s utilisé par %s trouvé dans aucune des bibliothèques."
 msgid ""
 "%s contains an unresolvable reference to symbol %s: it's probably a plugin."
 msgstr ""
+"%s contient une référence au symbole %s qui ne peut être résolue : il peut "
+"s'agir d'un greffon (« plugin »)."
 
 #: scripts/dpkg-shlibdeps.pl:347
 #, perl-format
@@ -1741,9 +1747,9 @@ msgid "unpack target exists: %s"
 msgstr "cible non compressée existe : %s"
 
 #: scripts/dpkg-source.pl:332
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s doesn't contain a valid OpenPGP signature"
-msgstr "ne contient pas de dépôt git"
+msgstr "%s ne contient pas de signature OpenPGP valable"
 
 #: scripts/dpkg-source.pl:334
 #, perl-format
@@ -1770,7 +1776,7 @@ msgstr ""
 "Copyright (C) 2008 Raphael Hertzog"
 
 #: scripts/dpkg-source.pl:373
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -1849,6 +1855,8 @@ msgstr ""
 "  --no-copy                  ne pas copier l'archive originale\n"
 "  --no-check                 ne pas contrôler la signature et les\n"
 "                             sommes de contrôle avant de décompacter.\n"
+" ---require-valid-signature  imposer que le paquet comporte une\n"
+"                             signature valable.\n"
 "\n"
 "Options générales :\n"
 "  -h, --help                 afficher ce message d'aide.\n"
@@ -2214,9 +2222,8 @@ msgstr ""
 "la somme de contrôle du fichier %s est %s au lieu de %s (algorithme %s)"
 
 #: scripts/Dpkg/Control.pm:55
-#, fuzzy
 msgid "standard input"
-msgstr "écriture sur l'entrée de tar"
+msgstr "entrée standard"
 
 #: scripts/Dpkg/Control.pm:103
 msgid "first block lacks a source field"
@@ -2365,6 +2372,7 @@ msgstr "Impossible d'analyser une ligne dans %s : %s"
 #, perl-format
 msgid "Tried to merge the same object (%s) twice in a symfile."
 msgstr ""
+"Tentative de fusion du même objet (%s) deux fois dans un fichier de symboles."
 
 #: scripts/Dpkg/Shlibs/SymbolFile.pm:239
 msgid "Can't merge symbols from objects without SONAME."
@@ -2823,9 +2831,9 @@ msgstr ""
 "compressées (.orig/)"
 
 #: scripts/Dpkg/Source/Package/V1.pm:215
-#, fuzzy, perl-format
+#, perl-format
 msgid "orig argument %s is not a plain file or directory"
-msgstr "paramètre répertoire %s n'est pas un répertoire"
+msgstr "le paramètre source %s n'est pas un fichier ou un répertoire"
 
 #: scripts/Dpkg/Source/Package/V1.pm:221
 #, perl-format
@@ -3214,12 +3222,16 @@ msgid ""
 "Version number suggests Ubuntu changes, but Maintainer: does not have Ubuntu "
 "address"
 msgstr ""
+"Le numéro de version indique des modifications Ubuntu mais le champ "
+"« Maintainer: » ne comporte pas d'adresse Ubuntu"
 
 #: scripts/Dpkg/Vendor/Ubuntu.pm:59
 msgid ""
 "Version number suggests Ubuntu changes, but there is no XSBC-Original-"
 "Maintainer field"
 msgstr ""
+"Le numéro de version indique des modifications Ubuntu mais il n'existe pas "
+"de champ « XSBC-Original-Maintainer: »"
 
 #: scripts/Dpkg/Version.pm:209
 #, perl-format
