dpkg-source: drop support of debian/control's Format field
There are no interesting use case where it makes sense to hardcode
the source format directly in debian/control. So drop that feature
before people start abusing this field instead of using
debian/source/format (which dpkg-source can have to create in some cases).

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Fix dpkg-shlibdeps so that it works again when analyzing binaries
     outside of package's directory. Closes: #518687
   * Modify dpkg-shlibdeps to let shlibs.local override symbols files too.
+  * Drop support of debian/control's “Format” field used by dpkg-source while
+    it's not too late. Instead debian/source/format should be used to indicate
+    the desired source package format.
 
   [ Updated dselect translations ]
   * German (Sven Joachim).
