dpkg-source: add --skip-debianization extract option
Extracting a source package with --skip-debianization can be interesting
when you want to import a source package in a VCS and want to import
the upstream sources without having precise knowledge of the internals
of all source package formats. This option is only supported for the
source formats "1.0", "2.0" and "3.0 (quilt)" that handle clearly
identified upstream sources.

--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -323,6 +323,9 @@ All the
 .BI \-s X
 options are mutually exclusive. If you specify more than one only the
 last one will be used.
+.TP
+.B \-\-skip\-debianization
+Skips application of the debian diff on top of the upstream sources.
 .
 .SS Format: 2.0
 Also known as wig&pen. This format is not recommended for wide-spread
@@ -438,6 +441,9 @@ Do not try to prepare the build tree by applying patches which are
 apparently unapplied.
 .PP
 .B Extract options
+.TP
+.B \-\-skip\-debianization
+Skips extraction of the debian tarball on top of the upstream sources.
 .TP
 .B \-\-skip\-patches
 Do not apply patches at the end of the extraction.
