Fixed typos in German man page (noticed while working on trunk translation)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
 dpkg (1.14.26) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
-  * Polish (Wiktor Wandachowicz). Closes: #514106
   * German (Helge Kreutzmann).
+  * Polish (Wiktor Wandachowicz). Closes: #514106
 
   [ Updated manpages translations ]
+  * German (Helge Kreutzmann).
   * Polish (Wiktor Wandachowicz). Closes: #514106
   * Swedish (Peter Krefting).
 
