--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2008-08-17 18:06+0400\n"
-"PO-Revision-Date: 2008-11-16 22:33+0100\n"
+"PO-Revision-Date: 2009-03-10 21:25+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -5207,7 +5207,7 @@ msgid ""
 "B> haven't been used)."
 msgstr ""
 "Die B<-s>I<x> Optionen steuern, ob das Original-Quellarchiv dem Upload "
-"hinzugefügt wird, falls die Quellen erzeugt werden (d.h. B<-b> or B<-B> "
+"hinzugefügt wird, falls die Quellen erzeugt werden (d.h. B<-b> oder B<-B> "
 "nicht verwendet wurden)."
 
 # type: TP
@@ -5796,7 +5796,7 @@ msgid ""
 msgstr ""
 "Optionen die beim Linken von Programmen oder Laufzeitbibliotheken an den "
 "Compiler weitergegeben werden (falls der Linker direkt aufgerufen wird, "
-"müssen B<-Wl> und B<,> aus diesen Optionen entfernt werden. Standardmäßig "
+"müssen B<-Wl> und B<,> aus diesen Optionen entfernt werden). Standardmäßig "
 "leer."
 
 # type: TP
@@ -14363,7 +14363,7 @@ msgstr ""
 #~ msgstr ""
 #~ "Diese Optionen steuern, ob das Original-Quellarchiv dem durch B<dpkg-"
 #~ "buildpackage> generierten Upload hinzugefügt wird, falls die Quellen "
-#~ "erzeugt werden (d.h. B<-b> or B<-B> nicht verwendet wurden)."
+#~ "erzeugt werden (d.h. B<-b> oder B<-B> nicht verwendet wurden)."
 
 # type: Plain text
 #~ msgid ""
