--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Swedish (Peter Krefting).
 
+  [ Updated man page translations ]
+  * German (Helge Kreutzmann).
+
  -- Guillem Jover <guillem@debian.org>  Mon, 02 Mar 2009 06:22:36 +0200
 
 dpkg (1.15.0) experimental; urgency=low
