u-a: Fix typo in man page (‘values’ → ‘value’)
Introduced in commit 7277e7e87af9cf4313880f228c693aa78ad46a03.

Reported-by: Helge Kreutzmann <debian@helgefjell.de>

--- a/man/update-alternatives.8
+++ b/man/update-alternatives.8
@@ -390,7 +390,7 @@ there is no alternatives available.
 .TP
 .BR Value: " <currently selected alternative> "
 The path of the currently selected alternative. It can also take the magic
-values \fBnone\fR. It is used if the link doesn't exist.
+value \fBnone\fR. It is used if the link doesn't exist.
 .TP
 .TP
 The other blocks describe the available alternatives in the queried link group:
