--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
+  * Swedish (Peter Krefting).
 
  -- Guillem Jover <guillem@debian.org>  Mon, 02 Mar 2009 06:22:36 +0200
 
