Update deb-triggers(5) and dpkg-trigger(1)
Update deb-triggers(5) and dpkg-trigger(1) to add a reference to
/usr/share/doc/dpkg/triggers.txt.gz.

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Drop support of debian/control's “Format” field used by dpkg-source while
     it's not too late. Instead debian/source/format should be used to indicate
     the desired source package format.
+  * Update deb-triggers(5) and dpkg-trigger(1) to add a reference to
+    /usr/share/doc/dpkg/triggers.txt.gz. Closes: #519717
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
