--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * dpkg-source now ignores all possible vi swap file extensions (and not
     only .swp). The corresponding exclude pattern for -I also got tightened to
     only catch filenames starting with a dot. Closes: #515540
+  * dpkg-gencontrol displays a better error message when an ORed dependency
+    is used in a union field like Conflicts, Replaces or Breaks.
+    Closes: #489238
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
