dpkg-source: don't block indefinitely on gpg
dpkg-source's signature check is now done with gpgv if possible and
timeouts if not completed within 10 seconds.

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * dpkg-gencontrol displays a better error message when an ORed dependency
     is used in a union field like Conflicts, Replaces or Breaks.
     Closes: #489238
+  * dpkg-source's signature check is now done with gpgv if possible and
+    timeouts if not completed within 10 seconds. Closes: #490929
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
