Misc updates concerning gpg and dpkg-source
* Always display a warning when the signature verification failed.
* Update the dpkg-source's manual page to document that only the user's
  trustedkeys.gpg keyring is used for signature verification.

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     Closes: #489238
   * dpkg-source's signature check is now done with gpgv if possible and
     timeouts if not completed within 10 seconds. Closes: #490929
+    When using gpg, use --no-default-keyring to be consistent with gpgv's
+    behaviour to not use the user's keyring. Closes: #440841
   * Update dpkg-dev dependencies: Closes: #472942
     - Move gnupg to Recommends. It's needed to sign .dsc and .changes.
     - Add gpgv to Recommends. Useful to check signatures of extracted packages.
