--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -183,7 +183,8 @@ Do not check signatures and checksums before unpacking.
 .TP
 .BI \-\-require\-valid\-signature
 Refuse to unpack the source package if it doesn't contain an OpenPGP
-signature that can be verified either with the user's keyring or one
+signature that can be verified either with the user's
+\fItrustedkeys.gpg\fP keyring or one
 of the official Debian keyrings
 (\fI/usr/share/keyrings/debian-keyring.gpg\fP
 and \fI/usr/share/keyrings/debian-maintainers.gpg\fP).
