Completed Asturian translation
Closes: #519998

--- a/po/ast.po
+++ b/po/ast.po
@@ -3455,12 +3455,12 @@ msgid ""
 msgstr ""
 "Sintaxis del formatu:\n"
 "  Un formatu ye una cadena que s'amosará pa cada paquete. El formatu\n"
-"  puede incluyir les secuencies d'escape estándares \\n (nueva llinia), \\r "
-"(retornu de\n"
-"  carru) o \\\\ (barra invertía). Puede incluyise información\n"
-"  sobro'l paquete inxertando referencies variables a los campos del paquete\n"
-"  usando la sintaxis ${var[;width]}. Los campos alliniaránse a la drecha a \n"
-"  menos que'l anchor seya negativu, nesi casu alliniaránse a la esquierda.\n"
+"  puede incluyir les secuencies d'escape estándares \\n (nueva llinia),\n"
+"  \\r (retornu de carru) o \\\\ (barra invertía). Puede incluyise\n"
+"  información sobro'l paquete inxertando referencies variables a los\n"
+"  campos del paquete usando la sintaxis ${var[;width]}. Los campos\n"
+"  alliniaránse a la drecha a menos que'l anchor seya negativu, nesi\n"
+"  casu alliniaránse a la esquierda.\n"
 
 #: src/query.c:489
 msgid ""
