Add debian/changelog entry for the German dpkg translation update
Bring translation updates back into alphabetical order.

--- a/debian/changelog
+++ b/debian/changelog
@@ -48,17 +48,18 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Swedish (Peter Krefting).
 
   [ Updated scripts translations ]
+  * French (Christian Perrier).
   * German (Helge Kreutzmann).
   * Swedish (Peter Krefting).
-  * French (Christian Perrier).
 
   [ Added dpkg translations ]
   * Asturian (Marcos Alvarez Costales). Closes: #519478, #519813
 
   [ Updated dpkg translations ]
+  * French (Christian Perrier).
+  * German (Sven Joachim).
   * Slovak (Ivan Masár). Closes: #519084
   * Swedish (Peter Krefting).
-  * French (Christian Perrier).
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
