Fix typo in a French manpage.

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -8547,7 +8547,7 @@ msgstr "dpkg-shlibdeps"
 msgid "dpkg-shlibdeps - generate shared library substvar dependencies"
 msgstr ""
 "dpkg-shlibdeps - générateur de variables de substitution de dépendances pour "
-"bibliothèque partagées"
+"bibliothèques partagées"
 
 # type: Plain text
 #: ../../man/dpkg-shlibdeps.1:10
